{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 53,
  "lineage": "8dafe129-7613-c1b3-ad44-be246fec71e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec52e92eb6d68310",
            "arn": "arn:aws:ec2:eu-west-2:891377361231:elastic-ip/eipalloc-0ec52e92eb6d68310",
            "association_id": "eipassoc-04983d26c4da81a6c",
            "domain": "vpc",
            "id": "eipalloc-0ec52e92eb6d68310",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0e63654e45d896cef",
            "private_dns": "ip-10-0-0-217.eu-west-2.compute.internal",
            "private_ip": "10.0.0.217",
            "public_dns": "ec2-13-41-51-194.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.51.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.i-one-test",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i-one-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091f18e98bc129c4e",
            "arn": "arn:aws:ec2:eu-west-2:891377361231:instance/i-0d6b8ca17efaa13fa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-0d6b8ca17efaa13fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-bastion-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0d290f541c2b0b8",
            "private_dns": "ip-10-0-1-174.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-2:891377361231:key/94b92846-ce57-4732-a6d4-ff4984ea0e15",
                "tags": {
                  "Name": "i-one-frontend"
                },
                "tags_all": {
                  "Name": "i-one-frontend"
                },
                "throughput": 0,
                "volume_id": "vol-0f1c812d86b10791c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff3c3b4df6fc2afc",
            "tags": {
              "Name": "i-one-backend"
            },
            "tags_all": {
              "Name": "i-one-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0505f3104e1cd974c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_key_pair.ec2-bastion-host-key",
            "aws_security_group.backend_sg",
            "aws_security_group.vpce_sg",
            "aws_subnet.i-one-test-private-zone-a",
            "aws_vpc.main",
            "local_file.ec2-bastion-host-public-key",
            "tls_private_key.ec2-bastion-host-key-pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i-one-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:internet-gateway/igw-056b80d0c1e962809",
            "id": "igw-056b80d0c1e962809",
            "owner_id": "891377361231",
            "tags": {
              "Env": "i-One-test"
            },
            "tags_all": {
              "Env": "i-One-test"
            },
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec52e92eb6d68310",
            "association_id": "eipassoc-04983d26c4da81a6c",
            "connectivity_type": "public",
            "id": "nat-06d804982b1052333",
            "network_interface_id": "eni-0e63654e45d896cef",
            "private_ip": "10.0.0.217",
            "public_ip": "13.41.51.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036067dbc9e0cc1af"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.i-one-test",
            "aws_subnet.i-one-test-public-zone-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "i-one_vpc_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:network-acl/acl-08b4dadf7d50fb5eb",
            "egress": [],
            "id": "acl-08b4dadf7d50fb5eb",
            "ingress": [],
            "owner_id": "891377361231",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "i-one-test_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fa12942c8d12aa01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d804982b1052333",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fa12942c8d12aa0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.i-one-test",
            "aws_nat_gateway.nat",
            "aws_route_table.i-one-test_private",
            "aws_subnet.i-one-test-public-zone-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "i-one-test_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-056b80d0c1e962809",
            "id": "r-rtb-0269be65e04f619961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0269be65e04f61996",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.i-one-test",
            "aws_route_table.i-one-test_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "i-one-test_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:route-table/rtb-00fa12942c8d12aa0",
            "id": "rtb-00fa12942c8d12aa0",
            "owner_id": "891377361231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d804982b1052333",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "i-one-test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:route-table/rtb-0269be65e04f61996",
            "id": "rtb-0269be65e04f61996",
            "owner_id": "891377361231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056b80d0c1e962809",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "i-one-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e90012ea8f7899",
            "route_table_id": "rtb-00fa12942c8d12aa0",
            "subnet_id": "subnet-0ff3c3b4df6fc2afc"
          },
          "dependencies": [
            "aws_route_table.i-one-test_private",
            "aws_subnet.i-one-test-private-zone-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "i-one-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a40243e7583d5f",
            "route_table_id": "rtb-00fa12942c8d12aa0",
            "subnet_id": "subnet-04ffbccb7fd1dd4d6"
          },
          "dependencies": [
            "aws_route_table.i-one-test_private",
            "aws_subnet.i-one-test-private-zone-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "i-one-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4b64722820cbcd2",
            "route_table_id": "rtb-0269be65e04f61996",
            "subnet_id": "subnet-036067dbc9e0cc1af"
          },
          "dependencies": [
            "aws_route_table.i-one-test_public",
            "aws_subnet.i-one-test-public-zone-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "i-one-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bd61a0cf9b90d75",
            "route_table_id": "rtb-0269be65e04f61996",
            "subnet_id": "subnet-0b5c7c311c22393c4"
          },
          "dependencies": [
            "aws_route_table.i-one-test_public",
            "aws_subnet.i-one-test-public-zone-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:security-group/sg-0505f3104e1cd974c",
            "description": "Security group for backend instance",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d152108b632f00b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0505f3104e1cd974c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "891377361231",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "staging"
            },
            "tags_all": {
              "environment": "staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:security-group/sg-05d152108b632f00b",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d152108b632f00b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sg",
            "name_prefix": "",
            "owner_id": "891377361231",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "staging"
            },
            "tags_all": {
              "environment": "staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "i-one-test-private-zone-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-0ff3c3b4df6fc2afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff3c3b4df6fc2afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i-one-test-private-sub-a"
            },
            "tags_all": {
              "Name": "i-one-test-private-sub-a"
            },
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "i-one-test-private-zone-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-04ffbccb7fd1dd4d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ffbccb7fd1dd4d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "i-one-test-private-sub-b"
            },
            "tags_all": {
              "env": "i-one-test-private-sub-b"
            },
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "i-one-test-public-zone-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-036067dbc9e0cc1af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036067dbc9e0cc1af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i-one-test-public-sub-a"
            },
            "tags_all": {
              "Name": "i-one-test-public-sub-a"
            },
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "i-one-test-public-zone-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:subnet/subnet-0b5c7c311c22393c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c7c311c22393c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377361231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "i-one-test-public-sub-b"
            },
            "tags_all": {
              "Name": "i-one-test-public-sub-b"
            },
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:vpc/vpc-0b52524363236e2a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eeaca5b9ddbd3a0f",
            "default_route_table_id": "rtb-00efa57d3a498f528",
            "default_security_group_id": "sg-0d6af0c64d4e9535f",
            "dhcp_options_id": "dopt-0463bf072b39f7839",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b52524363236e2a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00efa57d3a498f528",
            "owner_id": "891377361231",
            "tags": {
              "name": "i-one-test"
            },
            "tags_all": {
              "name": "i-one-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "backend-ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:vpc-endpoint/vpce-054732c90a16c1371",
            "dns_entry": [
              {
                "dns_name": "vpce-054732c90a16c1371-pim4ssod.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-054732c90a16c1371-pim4ssod-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-054732c90a16c1371-pim4ssod-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z092458722QSUVQSNR44Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-054732c90a16c1371",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019c4387c6e0004a4",
              "eni-09af617ca03788d5d"
            ],
            "owner_id": "891377361231",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05d152108b632f00b"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.50",
                "subnet_id": "subnet-0ff3c3b4df6fc2afc"
              },
              {
                "ipv4": "10.0.3.205",
                "subnet_id": "subnet-04ffbccb7fd1dd4d6"
              }
            ],
            "subnet_ids": [
              "subnet-04ffbccb7fd1dd4d6",
              "subnet-0ff3c3b4df6fc2afc"
            ],
            "tags": {
              "environment": "staging"
            },
            "tags_all": {
              "environment": "staging"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_subnet.i-one-test-private-zone-a",
            "aws_subnet.i-one-test-private-zone-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "backend-ssm_ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:vpc-endpoint/vpce-053d3453d25b92baa",
            "dns_entry": [
              {
                "dns_name": "vpce-053d3453d25b92baa-364tp4r9.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-053d3453d25b92baa-364tp4r9-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-053d3453d25b92baa-364tp4r9-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z08369026OS8RP1U630O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-053d3453d25b92baa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-075de4f7e735625dd",
              "eni-0a6476f215568dc06"
            ],
            "owner_id": "891377361231",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05d152108b632f00b"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.36",
                "subnet_id": "subnet-0ff3c3b4df6fc2afc"
              },
              {
                "ipv4": "10.0.3.218",
                "subnet_id": "subnet-04ffbccb7fd1dd4d6"
              }
            ],
            "subnet_ids": [
              "subnet-04ffbccb7fd1dd4d6",
              "subnet-0ff3c3b4df6fc2afc"
            ],
            "tags": {
              "environment": "staging"
            },
            "tags_all": {
              "environment": "staging"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_subnet.i-one-test-private-zone-a",
            "aws_subnet.i-one-test-private-zone-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "backend-ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377361231:vpc-endpoint/vpce-04782af28d4c75a26",
            "dns_entry": [
              {
                "dns_name": "vpce-04782af28d4c75a26-xcqf34zv.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04782af28d4c75a26-xcqf34zv-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04782af28d4c75a26-xcqf34zv-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z08087053VYQZ2EOL9I7W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04782af28d4c75a26",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0323fd204caeea6e1",
              "eni-0a6bb01e5edd60663"
            ],
            "owner_id": "891377361231",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d6af0c64d4e9535f"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.134",
                "subnet_id": "subnet-0ff3c3b4df6fc2afc"
              },
              {
                "ipv4": "10.0.3.57",
                "subnet_id": "subnet-04ffbccb7fd1dd4d6"
              }
            ],
            "subnet_ids": [
              "subnet-04ffbccb7fd1dd4d6",
              "subnet-0ff3c3b4df6fc2afc"
            ],
            "tags": {
              "environment": "staging"
            },
            "tags_all": {
              "environment": "staging"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b52524363236e2a8"
          },
          "dependencies": [
            "aws_subnet.i-one-test-private-zone-a",
            "aws_subnet.i-one-test-private-zone-b",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}